re PR c++/34774 (templates, enumerations, overflow, ice)

PR c++/34774
        * pt.c (value_dependent_expression_p): Look into DECL_INITIAL
        of enumerators, too.

From-SVN: r132292